--- a/lp.css
+++ b/lp.css
@@ -1,8 +1,89 @@
 .header{
     display: flex;
+    background-color: #1f2937;
+    justify-content: space-around;
     
 }
 
+.logo{
+     color:white;
+     font-size: 20px;
+     font-weight: 900;
+     display: flex;
+     align-items: center;
+     margin-right: 60px;
+
+}
+
+
 .links{
-    margin:0;
+    
+    display: flex;
+    gap: 20px;
+    list-style-type: none;
+    
+}
+
+a{
+    text-decoration: none;
+    color: antiquewhite;
+    
+}
+
+.mid{
+    display: flex;
+    background-color: #1f2937;
+    padding: 80px;
+    justify-content: space-evenly;
+    
+}
+
+
+.mid-s1{
+
+    width: 400px;
+    align-self: center;
+}
+
+
+.s-header{
+    font-size: 48px;
+    font-weight: 700;
+    color:#F9FAF8;
+    
+   
+}
+
+.s-bodytext{
+    font: size 18px;
+    color: #e5e7eb;
+}
+
+button{
+    
+    display: flex;
+    padding: 10px;
+    padding-left: 20px;
+    padding-right: 30px;
+    background-color: #3882F6;
+    color: #F9FAF8;
+    border-radius: 8px;
+    margin-top: 10px;
+    border: none;
+    
+    text-align: center;
+}
+
+
+
+
+.solo{
+    background-color:grey; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color:#e5e7eb;
+    width: 500px;
+    margin: 0;
+    
 }
