--- a/lp.css
+++ b/lp.css
@@ -87,3 +87,37 @@ button{
     margin: 0;
     
 }
+
+.t-header{
+    display: flex;
+    justify-content: center;
+    font-size: 36px;
+    font-weight: 900;
+    padding: 20px;
+}
+
+.group{
+    display: flex;
+    justify-content: center;
+    
+}
+
+.container{
+    width: 200px;
+}
+
+.shape{
+    border:5px solid #3882F6;
+    border-radius: 10px;
+    height: 100px;
+    width:100px;
+}
+.word{
+    color: grey;
+    width: 150px;
+
+}
+.fourth{
+    background-color: #E5E7EB;
+
+}
