--- a/lp.css
+++ b/lp.css
@@ -119,5 +119,24 @@ button{
 }
 .fourth{
     background-color: #E5E7EB;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    flex-direction: column;
+    
+
+}
+.quote{
+    font-size:36px;
+    color:#1f2937;
+    width: 600px; 
+    
+}
+.author{
+    display: flex;
+    font-weight: 900px;
+    font-size: 20px;
+    margin-left:auto;
+    margin-right: 500px;
 
 }
